--- a/score_app/templates/score_app/base.html
+++ b/score_app/templates/score_app/base.html
@@ -32,9 +32,9 @@
                                     <a class="nav-link" href="{% url 'create_match' %}">Create Match</a>
                                 </li>
                             {% endif %}
-                            <li class="nav-item">
+                            <li class="nav-item logout-button">
                                 <a class="nav-link btn btn-danger text-white" href="{% url 'logout' %}">Logout</a>
-                            </li>
+                            </li>                            
                         {% endif %}
                     </ul>
                 </div>
