Add overs field to Commentary model and update score handling logic

--- a/score_app/templates/score_app/match_commentary.html
+++ b/score_app/templates/score_app/match_commentary.html
@@ -21,6 +21,9 @@
                         <span class="commentary-text">
                             {{ comm.text }}
                         </span>
+                        <span class="overs-info text-muted">
+                            (Overs: {{ comm.overs|floatformat:1 }})
+                        </span>
                     </div>
                 {% endfor %}
             {% else %}
